# hse-deep-learning

./: .gitmodules  Makefile  README.md  pyproject.toml
src/hse_deep_learning/: app.py  custom_deep_sort.py  metrics.py
src/hse_deep_learning/cli/: main.py
src/hse_deep_learning/deep_sort/: deep_sort_app.py  evaluate_motchallenge.py  generate_videos.py  show_results.py
src/hse_deep_learning/deep_sort/application_util/: image_viewer.py  visualization.py
src/hse_deep_learning/deep_sort/deep_sort/: detection.py  iou_matching.py  kalman_filter.py  linear_assignment.py  track.py  tracker.py
src/hse_deep_learning/deep_sort/tools/: freeze_model.py  generate_detections.py
src/hse_deep_learning/detectors/: base.py  yolov10.py  yolov5.py
src/hse_deep_learning/features_extractors/: tourch_reid.py
src/hse_deep_learning/utils/: dataset.py  painter.py  shapes.py
