[project]
name = "hse-deep-learning"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = [
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "pydantic==2.8.2",
    "torch==2.3.1",
]

[project.optional-dependencies]
develop = [
    "black==24.3.0",
    "coverage==7.4.4",
    "isort==5.13.2",
    "mypy==1.9.0",
    "pytest==8.1.1",
    "ruff==0.3.5",
    "types-setuptools"
]

[build-system]
requires = [
    "build",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2"
]

[tool.ruff]
exclude = [".venv"]
line-length = 120

[tool.black]
line_length = 120

[tool.mypy]
ignore_missing_imports = true
