[project]
name = "hse-deep-learning"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = [
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "pydantic==2.8.2",
    "scikit-learn==1.5.1",
    "torch==2.3.1",
    "torchreid @ git+https://github.com/ye11owSub/deep-person-reid.git@adding_build_via_pyproject",
]

[project.optional-dependencies]
develop = [
    "isort==5.13.2",
    "mypy==1.9.0",
    "pytest==8.1.1",
    "ruff==0.5.4",
    "types-setuptools"
]

[build-system]
requires = [
    "build",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[project.scripts]
deep-sort = "hse_deep_learning.cli:main"

[tool.setuptools.package-data]
share = ["share"]

[tool.ruff]
exclude = [".venv"]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
